// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/common/Grid should render properly 1`] = `
.c0 {
  display: flex;
  flex-direction: row;
  gap: 16px;
}

<div>
  <div
    class="c0"
  >
    CONTENT
  </div>
</div>
`;

exports[`components/common/Grid should render props 1`] = `
.c0 {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 24px;
  align-items: flex-end;
  justify-content: flex-start;
}

<div>
  <section
    class="c0"
  >
    CONTENT
  </section>
</div>
`;
